; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-x11.c_gl_platform_destroy.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-x11.c_gl_platform_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_platform = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gl_platform_destroy(%struct.gl_platform* %0) #0 {
  %2 = alloca %struct.gl_platform*, align 8
  store %struct.gl_platform* %0, %struct.gl_platform** %2, align 8
  %3 = load %struct.gl_platform*, %struct.gl_platform** %2, align 8
  %4 = icmp ne %struct.gl_platform* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %9

6:                                                ; preds = %1
  %7 = load %struct.gl_platform*, %struct.gl_platform** %2, align 8
  %8 = call i32 @gl_context_destroy(%struct.gl_platform* %7)
  br label %9

9:                                                ; preds = %6, %5
  ret void
}

declare dso_local i32 @gl_context_destroy(%struct.gl_platform*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
